tests/type_errors/string_where_int_expected.nos
# expect_error: type mismatch
# Test: passing String where Int is expected

double(x: Int) = x * 2

main() = double("hello")
